# history

./: .gitignore  Cargo.toml  README.md
db/: history.db
src/: auth.rs  error.rs  main.rs  models.rs  templates.rs  views.rs
src/models/: book.rs  post.rs  publication.rs  text.rs  textbook.rs
src/views/: admin.rs  books.rs  handlers.rs  mod.rs  posts.rs  publications.rs  textbooks.rs  texts.rs
templates/: about.html  base.html  blog.html  entry.html  home.html  lib.html  login.html  secret.html
templates/admin/: base.html  books.html  posts.html
templates/admin/books/: add.html  edit.html  list.html
templates/admin/posts/: add.html  edit.html  list.html
templates/admin/publications/: add.html  edit.html  list.html
templates/admin/textbooks/: add.html  edit.html  list.html
templates/admin/texts/: add.html  edit.html  list.html
templates/main/: base.html  home.html
