[package]
name = "history"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
askama = "0.12"
tokio = { version = "1.0", features = ["full"] }
axum-login = { version = "0.5", features = ["sqlite"] }
rand = { version = "0.8", features = ["min_const_gen"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.4.0", features = ["fs"] }
